--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,33 +1,57 @@
 .page-title {
-    <!--SHORTHANDMARGENS*/--!>
-
-   margin: 40 px auto 5px;
-   padding left: 50px;
-   width:80%;
-   font-size: 24 pt;
-   color: #8E3200;
-
-
-}
+        /* SHORTHAND MARGENS*/    
+        margin: 40px auto 5px;
+        padding-left: 10px;
+        width: 80%;
+        font-size: 30pt;
+        font-weight: bold;
+        color: #8E3200;       
+    }
 
 h2 {
-    margin: 5px auto 25px;
-   padding left: 50px;
-   width:80%;
-   font-size: 24 pt;
-   font-weight: bold;
-   color: #8E3200;
-}
-main{
-    main margin: 40px auto 5 px; 
-    padding-left: 10px
-}
-.article-title {
-    margin: 100 px auto 60px;
-    padding left: 50px;
-    width:80%;
-    font-size: 24 pt;
-    color: #8E3200;
- 
+        /* margin: 5px auto 25px; */        
+        margin-top: 5px;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 25px;
+        padding-left: 10px;
+        width: 80%;
+        font-size: 15pt;
+        color: #8E3200;   
+    }    
 
+
+    article{
+    width: 80%;
+    margin: 40px 0 5px;
+    }
+
+    p{
+        margin-top: 20px;
+    }
+
+main{
+    width: 80%;
+    margin: 40px auto 5px;
+    padding-left: 10px;
+}
+
+.article-title {
+    /* SHORTHAND MARGENS*/    
+    margin: 40px auto 5px;    
+    font-size: 22pt;    
+    color: #8E3200;       
+}
+
+.titulo-produto {
+    /* SHORTHAND MARGENS*/    
+    margin: 40px 0 5px;    
+    font-size: 18pt;
+    font-weight: bold;    
+    color: black;
+    background-color: #8E3200;
+}
+
+.imagem-produto{
+    width: 370px;
 }
