--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Fasthand&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body{
+background-color: rgb(207, 229, 222);
+
+}
+
+
 .page-title {
         /* SHORTHAND MARGENS*/    
         margin: 40px auto 5px;
         padding-left: 10px;
         width: 80%;
         font-size: 30pt;
-        font-weight: bold;
-        color: #8E3200;       
+        font-weight: 600;
+        color:black;       
     }
+
+    header{ 
+        background-color: rgb(79, 129, 128);
+    }
+    nav ul{
+        float:right;
+        margin-right: 80px;
+        list-style: none;
+        position: relative;
+        text-indent: 90px;
+        padding: 15px;
+        margin-top: 20px;
+    
+    }
+
+    li a{
+        text-decoration: none;
+        color:black
+    }
+
+a:hover{
+    transition: 5px;
+    background-color: lightseagreen;
+    padding: 20px;
+}
 
 h2 {
         /* margin: 5px auto 25px; */        
@@ -17,7 +50,7 @@ h2 {
         padding-left: 10px;
         width: 80%;
         font-size: 15pt;
-        color: #8E3200;   
+        color: black;   
     }    
 
 
@@ -40,18 +73,46 @@ main{
     /* SHORTHAND MARGENS*/    
     margin: 40px auto 5px;    
     font-size: 22pt;    
-    color: #8E3200;       
+    color: black;       
 }
 
 .titulo-produto {
     /* SHORTHAND MARGENS*/    
-    margin: 40px 0 5px;    
-    font-size: 18pt;
-    font-weight: bold;    
+    margin: 40px 0 5px; 
+    font-family: 'Rubik', sans-serif;   
+    font-size: 22pt;
+    font-weight: 800;    
+    font-style: italic;
     color: black;
-    background-color: #8E3200;
+    background-color: rgb(105, 123, 105);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    width: 100%;
+    border: radius 10px;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.4);
+
 }
 
 .imagem-produto{
-    width: 370px;
+    width: 300px;
+    margin-left: 10px;
+    margin-right: 90px;
+    margin-left: 80px;
+    padding-top: 30px;
+    text-align: center;
 }
+
+footer{
+background-color: rgb(122, 151, 122);
+text-align: center;
+width: 100%;
+height: 80px;
+padding-top: 30px;
+font-family: 'Rubik', sans-serif; 
+
+
+
+}
+
+
