--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,18 +16,23 @@ background-color: rgb(207, 229, 222);
         color:black;       
     }
 
-    header{ 
-        background-color: rgb(79, 129, 128);
-    }
-    nav ul{
-        float:right;
-        margin-right: 80px;
+    .menu-navegacao {
+        display:flex;
+        /* SHORTHAND MARGENS*/    
+       margin-right: 80px;
+        padding-left:  10px;
+        width: 30%;
+        font-size: 15pt;
+        justify-content: space-between;
+        float: right;
         list-style: none;
         position: relative;
-        text-indent: 90px;
-        padding: 15px;
-        margin-top: 20px;
-    
+       
+        color:black;       
+    }
+
+    header{ 
+        background-color: rgb(79, 129, 128);
     }
 
     li a{
@@ -105,7 +110,7 @@ main{
 
 footer{
 background-color: rgb(122, 151, 122);
-text-align: center;
+text-align: left;
 width: 100%;
 height: 80px;
 padding-top: 30px;
